# fungoid

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  publish.yml  tests.yml
examples/: factorial.bf  input.bf  rng.bf
examples/93/: hello_world.bf
src/: examples.rs  execution.rs  ide.rs  lib.rs  main.rs  program.rs  step.rs
