[package]
name = "fungoid"
version = "0.2.1"
description = "A Befunge interpreter and IDE"
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
edition = '2018'
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/JoshKarpel/fungoid"
homepage = "https://github.com/JoshKarpel/fungoid"
repository = "https://github.com/JoshKarpel/fungoid"

[dependencies]
chrono = "0.4.19"
clap = "3.1.18"
crossterm = "0.23.2"
humantime = "2.0.1"
rand = "0.8.5"
separator = "0.4.1"
tui = "0.18.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
