[package]
name = "fungoid"
version = "0.2.2"
description = "A Befunge interpreter and IDE"
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
edition = '2018'
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/JoshKarpel/fungoid"
homepage = "https://github.com/JoshKarpel/fungoid"
repository = "https://github.com/JoshKarpel/fungoid"

[dependencies]
chrono = "0.4.21"
clap = "3.2.17"
crossterm = "0.24.0"
humantime = "2.0.1"
rand = "0.8.5"
separator = "0.4.1"
tui = "0.19.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
