[package]
name = "fungoid"
version = "0.2.2"
description = "A Befunge interpreter and IDE"
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
edition = '2018'
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/JoshKarpel/fungoid"
homepage = "https://github.com/JoshKarpel/fungoid"
repository = "https://github.com/JoshKarpel/fungoid"

[dependencies]
clap = "4"
crossterm = "0"
humantime = "2"
rand = "0"
separator = "0"
time = { version = "0", features = ["formatting", "local-offset"] }
tui = "0"
itertools = "0"
lazy_static = "1"
